# DataHub

./: .gitattributes  .gitignore  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.datalad/: config
.github/workflows/: docs.yml  (+2 more)
analyzed_data/: README.md
config/: phenotype_tree.json
docs/: README.md  big_data_processing.md  contributing.md  docs-site.md  faq.md  getting-started.md  index.md  metadata.schema.json.md  prov.schema.json.md  repository-tour.md  schema.md  schema_reference.md  submitting.md  validation.md
raw_data/: README.md
schemas/: metadata.schema.json  prov.schema.json
scripts/: build_legacy_association.py  checksum.py  enrich_structural_variant_exons.py  gen_schema_docs.py  prepare_association_raw.py  report_artifact_qa.py  run_ingestion.py  run_structural_variant_ingestion.py  validate_metadata.py
src/: __init__.py
tests/: test_api_clients.py  test_artifact_qa.py  test_association_serving_builder.py  test_association_serving_upgrade.py  test_common_paths.py  test_config_schemas.py  test_export_manifest.py  test_gene_ids.py  test_gtf_annotations.py  test_large_processor.py  test_legacy_pipeline.py  test_legacy_raw_ingest_delimiter.py  test_lfs.py  test_list_datasets.py  test_mvp_adapter.py  test_mvp_fast_ingest.py  test_mvp_resume.py  test_output_contracts.py  test_prep_association.py  test_profiles.py  test_protein_context.py  test_provenance.py  test_registry.py  test_rollup_publisher.py  test_run_ingestion.py  test_secondary_analyses.py  test_source_adapters.py  test_source_catalog.py  test_sources.py  test_structural_variant_exon_backfill.py  test_structural_variant_pipeline.py  test_unified_publish_ancestry.py  test_unified_runner.py  test_unified_runtime.py  test_working_duckdb.py
tools/: datalad_helpers.sh  hbp-validate  large_dataset_processor.py  list_datasets.py
(+193 files in other folders)
